# cmake_cookbook

./: .gitignore
chapter-01/: README.md
chapter-01/control_flow_constructs_recipe_10/src/: CMakeLists.txt  geometry_circle.hpp  geometry_rhombus.hpp  geometry_square.hpp
chapter-01/controlling_compiler_flags_recipe_08/src/: compute-areas.cpp  geometry_circle.cpp  geometry_polygon.cpp  geometry_rhombus.cpp  geometry_square.cpp
chapter-01/options_to_user_recipe_05/src/: CMakeLists.txt  Message.cpp
chapter-01/recipe-01/src/: CMakeLists.txt
chapter-01/recipe-03/src/: CMakeLists.txt
chapter-01/recipe-05/src/: CMakeLists.txt  Message.hpp  hello-world.cpp
chapter-01/recipe-08/src/: CMakeLists.txt  compute-areas.cpp  geometry_circle.hpp  geometry_polygon.hpp  geometry_rhombus.hpp  geometry_square.hpp
chapter-01/recipe-09/src/: CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Factory.hpp
chapter-01/recipe-10/src/: compute-areas.cpp  geometry_circle.cpp  geometry_polygon.cpp  geometry_polygon.hpp  geometry_rhombus.cpp  geometry_square.cpp
chapter-01/sinlge_source_file_recipe_01/src/: hello-world.cpp
chapter-01/specifying_compiler_recipe_06/src/: CMakeLists.txt
chapter-01/standard_for_the_language_09/src/: Animal.cpp  Animal.hpp  animal-farm.cpp
chapter-01/static_shared_libs_recipe_03/src/: CMakeLists.txt
chapter-01/switching_build_type_recipe_07/src/: CMakeLists.txt
chapter-02/compiler_dependent_source_code_recipe_03/src/: hello_world.cpp
chapter-02/discover_operating_system_recipe_01/src/: CMakeLists.txt
chapter-02/enabling_vectorizatin_eigen_recipe_06/src/: CMakeLists.txt
chapter-02/host_processor_instruction_set_recipe_05/src/: CMakeLists.txt  processor_info.cpp
chapter-02/recipe-03/src/: CMakeLists.txt  hello_world.F90
chapter-02/recipe-04/src/: CMakeLists.txt  arch_dependent.cpp
chapter-02/recipe-06/src/: linear_algebra.cpp
chapter-02/recipe02/src/: CMakeLists.txt  hello_world.cpp
chapter-03/Boost_recipe_08/src/: CMakeLists.txt  path_info.cpp
chapter-03/Eigen-recipe_07/src/: CMakeLists.txt  linear_algebra.cpp
chapter-03/blas_lapack_libraries_recipe_04/src/: CxxBLAS.cpp  CxxLAPACK.cpp
chapter-03/detect_python_library_recipe_02/src/: CMakeLists.txt  hello_embedded_python.c
chapter-03/find_module_recipe_10/src/: CMakeLists.txt  FindZeroMQ.cmake  hwclient.c  hwserver.c
chapter-03/python_interpreter_recipe_01/src/: CMakeLists.txt
chapter-03/recipe-03/src/: CMakeLists.txt  Py3_pure_embedding.cpp  use_numpy.py
chapter-03/recipe-04/src/: CMakeLists.txt  CxxBLAS.hpp  CxxLAPACK.hpp  linear_algebra.cpp
chapter-03/recipe-05/src/: CMakeLists.txt  example.cpp
chapter-03/recipe-06_MPI/src/: CMakeLists.txt  hello_mpi.cpp
chapter-03/zmq_recipe_09/src/: CMakeLists.txt  hwclient.c  hwserver.c
chapter_04/boost_test_recipe_04/src/: CMakeLists.txt  main.cpp  test.cpp
chapter_04/catch2_recipe_02/src/: CMakeLists.txt  sum_integers.hpp  test.cpp
chapter_04/fixtures_recipe_10/src/: CMakeLists.txt
chapter_04/google_test_recipe_03/src/: CMakeLists.txt  sum_integers.cpp  test.cpp
chapter_04/parallel_testing_recipe_08/src/: CMakeLists.txt
chapter_04/parallel_testing_recipe_08/src/test/: CMakeLists.txt  a.py  e.py  h.py  i.py  j.py
chapter_04/run_subset_recipe_09/src/: CMakeLists.txt
chapter_04/run_subset_recipe_09/src/test/: benchmark-a.py  benchmark-b.py  feature-b.py  feature-c.py  feature-d.py
chapter_04/simple_unit_test_recipe_01/src/: CMakeLists.txt  main.cpp  sum_integers.cpp  test.cpp  test.py  test.sh
chapter_04/test_expected_failures_recipe_06/src/: CMakeLists.txt
chapter_04/timeouts_recipe_07/src/: CMakeLists.txt  test.py
chapter_04/valgrind_recipe_05/src/: CMakeLists.txt  leaky_implementation.cpp  leaky_implementation.hpp  test.cpp
chapter_05/add_custom_target_recipe_04/src/: CMakeLists.txt
chapter_05/custom_command_build_recipe_03/src/: CMakeLists.txt  linear_algebra.cpp
chapter_05/custom_command_configure_recipe_02/src/: CMakeLists.txt
chapter_05/fine_tune_config_recipe_09/: CMakeLists.txt  example.cpp
chapter_05/platform_independent_recipe_01/src/: CMakeLists.txt  linear_algebra.cpp
chapter_05/probe_compilation_recipe_06/src/: CMakeLists.txt  taskloop.cpp
chapter_05/probe_compiler_flags_07/src/: CMakeLists.txt  asan-example.cpp
chapter_05/probe_execution_08/src/: CMakeLists.txt  use-uuid.cpp
chapter_05/specific_targets_custom_recipe_05/src/: CMakeLists.txt  echo_file.py  static_size.py
chapter_06/add_version_from_a_file_05/: CMakeLists.txt  example.cpp  version.hpp.in
chapter_06/generate_src_build_time_03/: CMakeLists.txt  example.cpp  generate.py
chapter_06/generate_src_config_time_01/: CMakeLists.txt
chapter_06/generate_src_config_time_01/src/: example.f90  print_info.c.in
chapter_06/python_generate_src_config_time_02/src/: CMakeLists.txt  configurator.py  example.f90  print_info.c.in
chapter_06/record_git_hash_build_time_07/: CMakeLists.txt  example.cpp  git-hash.cmake  version.hpp.in
chapter_06/record_git_hash_config_time_06/: CMakeLists.txt  example.cpp  version.hpp.in
chapter_06/record_project_version_04/: CMakeLists.txt  example.c
chapter_07/avoid_global_variables_08/: CMakeLists.txt
chapter_07/avoid_global_variables_08/src/: CMakeLists.txt  main.cpp
chapter_07/avoid_global_variables_08/tests/: CMakeLists.txt  catch.hpp  test.cpp
chapter_07/deprecating_functions_06/: CMakeLists.txt
chapter_07/function_compiler_flags_03/: CMakeLists.txt
chapter_07/limiting_scope_07/: CMakeLists.txt
chapter_07/named_arguments_04/: CMakeLists.txt
chapter_07/named_arguments_04/cmake/: testing.cmake
chapter_07/named_arguments_04/src/: CMakeLists.txt
chapter_07/named_arguments_04/tests/: CMakeLists.txt
chapter_07/organize_fortran_09/: CMakeLists.txt
chapter_07/recipe_01/: CMakeLists.txt
chapter_07/redefine_functions_05/: CMakeLists.txt
chapter_07/splitting_sources_modules_02/: CMakeLists.txt
chapter_08/boost_superbuild_02/: CMakeLists.txt
chapter_08/fftw_03/: CMakeLists.txt
chapter_08/fftw_03/src/: CMakeLists.txt  (+1 more)
chapter_08/superbuild_pattern_01/: CMakeLists.txt
(+61 files in other folders)
