cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
project(recipe-06 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Eigen3 3.3 REQUIRED CONFIG)
include(CheckCXXCompilerFlag)
check_cxx_compiler_flag("-march=native" _march_native_works)
check_cxx_compiler_flag("-xHost" _xhost_works)
set(_CXX_FLAGS)
if(_march_native_works)
    message(STATUS "Using processor's vector instructions (-march=native compiler flag set)")
    set(_CXX_FLAGS "-march=native")
elseif(_xhost_works)
    message(STATUS "Using processor's vector instructions (-xHost compiler flag set)")
    set(_CXX_FLAGS "-xHost")
else()
    message(STATUS "No suitable compiler flag found for vectorization")
endif()
# Define an unoptimized verision as a executable target
add_executable(linear_algebra_unoptimized linear_algebra.cpp)
target_link_libraries(linear_algebra_unoptimized PRIVATE Eigen3::Eigen)
# Define an optimized version as an executable target.
add_executable(linear_algebra linear_algebra.cpp)
target_link_libraries(linear_algebra PRIVATE Eigen3::Eigen)